javali_tests/A3/A4_keinestamSchmid/success/CorrectBuiltInWriteLnCall.javali
// Rule 2.3.2: Tests that a correct call to writeln succeeds.
class Main {
	void main() {
		writeln();
	}
}