javali_tests/A3/A4_keinestamSchmid/fail/IncorrectBuiltInWriteCall3.javali
// Rule 2.3.1: Tests that an incorrect call to write fails.
class Main {
	void main() {
		write(4.3);
	}
}